--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YelpCamp</title>
-    <link rel="icon" href="/YelpCamp logo.png" type="image/png" />
+    <link
+      rel="shortcut icon"
+      href="https://rikisyelpcamp.cyclic.app/YelpCamp%20logo.png"
+      type="image/png"
+    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
