--- a/public/stlesheets/home.css
+++ b/public/stlesheets/home.css
@@ -7,10 +7,14 @@ body {
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
-
-.cover-container {
-    max-width: 60vw;
+.inner-body {
+    background: none;
+    height: 100vh;
 }
+
+/* .cover-container {
+    max-width: 60vw;
+} */
 
 .nav-link {
     font-weight: 700;
