--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stlesheets/stars.css" />
 
 <div class="row">
-  <div class="col-6">
+  <div class="col-lg-6">
     <div
       id="carouselExampleControls"
       class="carousel slide"
@@ -72,7 +72,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-lg-6">
     <% if(currentUser) { %>
     <h2>Leave a Review</h2>
     <form
