--- a/public/stlesheets/home.css
+++ b/public/stlesheets/home.css
@@ -6,35 +6,82 @@ body {
     background-position: center;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+h3 {
+    display: inline;
+}
+.inside-nav {
+    display: flex;
+    margin: 15px 25px 0 25px;
+}
+.links {
+    margin-left: auto;
+}
+@media screen and (min-width: 1200px) {
+    .inner-body {
+      width: 1000px;
+      margin: 0 auto;
+    }
+    .nav {
+        max-width: 100vw;
+    }
+  }
+.inside-nav {
+    display: flex;
 }
 .inner-body {
     background: none;
     height: 100vh;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-
-/* .cover-container {
-    max-width: 60vw;
-} */
-
-.nav-link {
+.link {
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
     font-weight: 700;
     padding: 0.25rem 0;
     margin-left: 1rem;
-    color: rgba(255, 255, 255, 0.5);
     border-bottom: 0.25rem solid transparent;
 }
+/* .cover-container {
+    max-width: 60vw;
+} */
+/* 
+.nav-link {
+    padding: 0.25rem 0;
+    margin-left: 1rem;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.5);
+    border-bottom: 0.25rem solid transparent;
+} */
 
+.link:hover {
+    color: rgba(255, 255, 255, 0.5);
+    border-bottom-color: rgba(255, 255, 255, 0.5);
+}
 .nav-link:hover {
     color: rgba(255, 255, 255, 0.5);
     border-bottom-color: rgba(255, 255, 255, 0.5);
 }
 
+.link.active {
+    color: white;
+    border-bottom-color:white;
+}
 .nav-link.active {
     color: white;
     border-bottom-color:white;
 }
 
-.btn-secondary{
+.button {
+    font-size: 1.3rem;
+    text-decoration: none;
+    margin: 1rem;
+    padding: 0.5rem 0.7rem;
+    border-radius: 5px;
     font-weight: 700;
     color: #333;
     text-shadow: none;
@@ -46,7 +93,7 @@ body {
     -moz-box-shadow: 1px 2px 10px 2px rgba(255, 255, 255, 0.75);
 }
 
-.btn-secondary:hover{
+.button:hover{
     color: black;
     background-color: white;
     transform: scale(1.05);
