--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YelpCamp</title>
-    <link
-      rel="shortcut icon"
-      href="/images/YelpCamp logo.png"
-      type="image/png"
-    />
+    <link rel="icon" href="/favicon.ico" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
